# filera

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  flake.nix.bak  package-lock.json  package.json  shell.nix  tauri_build.sh  tauri_dev.sh  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
icon/: icon_v01.c4d
src/: App.vue  main.ts  styles.css  tailwind.config.js  themes.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  filera.provisionprofile  rustfmt.toml  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomics.rs  filestatus_selections.rs  lib.rs  main.rs  process_tasks.rs  user_filestatus.rs  user_std.rs
src/components/: ChangeCaseTask.vue  CustomTextTask.vue  DateTask.vue  FileStatusTable.vue  FilterDocTypeTask.vue  FilterNameTask.vue  FilterTimePeriodTask.vue  FilterTimeTask.vue  NumSequenceTask.vue  ThemeSwitcher.vue  TimeTask.vue
src/utils/: taskUtils.ts  usePosNoise.ts
tests/: create-edge-cases.py  create-typical-files.py  test_generator.py
tests/edge-cases/:   multiple_issues .txt   .space_dot.txt   123_number.txt  !important_file.txt  !xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.txt  $dollar_first.txt  $variable_name.txt  %percent_start.txt  &ampersand_first.txt  )close_paren.txt  -42_negative.txt  . space_after_dot.txt  ...triple_dot  ..parent_reference  .hidden_file  .tar.gz.backup  .xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  0xFF_hex.txt  1e10_scientific.txt  1file.txt  2024-01-01_date.txt  @symbol_start.txt  CONSOLE.txt  NULL_FILE.txt  PARALLEL1.txt  PRINTER.txt  SERIAL1.txt  SERIAL2.txt  [bracket_file.txt  ^caret_file.txt  ___triple_under.txt  backslash_start.txt  current_dir.txt  double_escape_file.txt  failed_creation_3514.txt  failed_creation_5752.txt  failed_creation_7461.txt  failed_creation_8567.txt  greater_than.txt  install.msi  (+10 more)
tests/test_files/:    triple_space.txt  (paren_file.txt  (+44 more)
(+21 files in other folders)
