[package]
name = "filera"
version = "0.3.5"
description = "Batch rename your files with ease"
authors = ["joncorv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "filera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
notify-rust = "4.11.7"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2"
clippy = "0.0.302"
time = "0.3.41"
natord = "1.0.9"
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"] }
notifica = "3.0.2"

